--- a/style.css
+++ b/style.css
@@ -12,7 +12,16 @@ body {
     height: 450px;
     margin: 20px 80px;
     padding: 10px;
-    border-radius: 2%;
+    border-radius: 15px;
+
+}
+.sprint2 {
+    background-color: rgb(243, 203, 255);
+    width: 1100px;
+    height: 630px;
+    margin: 20px 80px;
+    padding: 10px;
+    border-radius: 15px;
 
 }
 
@@ -41,7 +50,7 @@ h4 {
     -webkit-box-shadow: 0px 0px 14px 6px rgba(83, 18, 90, 0.5);
     -moz-box-shadow: 0px 0px 14px 6px rgba(83, 0, 90, 0.2);
     box-shadow: 0px 0px 14px 6px rgba(83, 0, 90, 0.2);
-    border-radius: 3%;
+    border-radius: 15px;
     transition: .3s;
 }
 
@@ -51,23 +60,26 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    border-radius: 10%;
+    border-radius: 10px;
     font-weight: bold;
     transition: .3s;
 }
 
 .view:hover {
-    width: 260px;
-    height: 140px;
+    width: 250px;
+    height: 130px;
     transition: .3s;
+    background-color: rgb(210, 150, 216);
+    color: white;
 }
 
 .a a {
-    color: rgb(205, 84, 230);
+    color: rgb(177, 59, 201);
     text-decoration: none;
     margin: 0;
     height: 19px;
     width: 44px;
+    transition: .3s;
 }
 
 .a a::after {
@@ -83,6 +95,7 @@ h4 {
 }
 
 .b:hover {
+    background-color: rgb(255, 255, 255);
     width: 90px;
     height: 25px;
     display: flex;
@@ -108,4 +121,20 @@ h2 {
 h2:hover {
     color: rgb(148, 0, 161);
     transition: .3s;
+
+}
+.c{
+    margin: 20px 170px;
+ background-color: rgb(179, 93, 219);
+ height: 50px;
+ width: 1000px;
+ border-radius: 10px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ position: sticky;
+ top:10px;
+ color: white;
+ 
+
 }
